--- a/FINAL/index.html
+++ b/FINAL/index.html
@@ -8,6 +8,11 @@
   </head>
 
   <body>
+    <div>
+      <h1 class="judul">
+        Cekung
+      </h1>
+    </div>
     <div class="inputs" id="inputUi">
       <div class="tinggiObjek">
         <label for="tinggiObjek">Tinggi Objek</label>
