--- a/FINAL/index.html
+++ b/FINAL/index.html
@@ -7,25 +7,8 @@
     <link rel="stylesheet" href="./style/style.css" />
   </head>
   <body>
-    <nav class="main-nav" id="main-nav">
-      <div class="nav-content">
-        <div class="toggle-btn">=</div>
-        <span style="--i: 1">
-          <div id="cekungButton"><div class="concaveLogo"></div></div>
-          <span class="tooltip">Cekung</span>
-        </span>
-        <span style="--i: 2">
-          <div id="cembungButton"><div class="convexLogo"></div></div>
-          <span class="tooltip">Cembung</span>
-        </span>
-      </div>
-    </nav>
-    <div class="judul">
-      <h1>Selamat Datang!</h1>
-      <p>Pilih Sebuah Lensa</p>
-      <p>====></p>
-    </div>
     <div class="inputs" id="inputUi">
+      <div><p id="lensName">Belum Dipilih</p></div>
       <div class="tinggiObjek">
         <label for="tinggiObjek">Tinggi Objek</label>
         <input
@@ -37,30 +20,37 @@
         />
         <p id="tinggiObjekValue">100</p>
       </div>
-      <div>
-        <div class="jarakBenda">
-          <label for="jarakBenda">Jarak Benda</label>
-          <input
-            type="range"
-            name="jarakBenda"
-            id="jarakBenda"
-            min="105"
-            max="700"
-          />
-          <p id="jarakBendaValue">100</p>
-        </div>
-        <div class="jarakFokus">
-          <label for="jarakFokus">Jarak Fokus</label>
-          <input
-            type="range"
-            name="jarakFokus"
-            id="jarakFokus"
-            min="100"
-            max="350"
-          />
-          <p id="jarakFokusValue">100</p>
-        </div>
+      <div class="jarakBenda">
+        <label for="jarakBenda">Jarak Benda</label>
+        <input
+          type="range"
+          name="jarakBenda"
+          id="jarakBenda"
+          min="105"
+          max="700"
+        />
+        <p id="jarakBendaValue">100</p>
       </div>
+      <div class="jarakFokus">
+        <label for="jarakFokus">Jarak Fokus</label>
+        <input
+          type="range"
+          name="jarakFokus"
+          id="jarakFokus"
+          min="100"
+          max="350"
+        />
+        <p id="jarakFokusValue">100</p>
+      </div>
+    </div>
+    <div class="judul">
+      <h1>Selamat Datang!</h1>
+      <p>Pilih Sebuah Lensa</p>
+    </div>
+    <div class="dock">
+      <div id="cekungButton">Cekung</div>
+      <div id="cembungButton">Cembung</div>
+      <div>niger</div>
     </div>
     <canvas id="myCanvas" width="1800" height="900"></canvas>
     <script type="module" src="./script/script.js"></script>
