--- a/FINAL/index.html
+++ b/FINAL/index.html
@@ -18,7 +18,7 @@
           min="30"
           max="250"
         />
-        <p id="tinggiObjekValue">100</p>
+        <p id="tinggiObjekValue">xx <span>px</span></p>
       </div>
       <div class="jarakBenda">
         <label for="jarakBenda">Jarak Benda</label>
@@ -29,7 +29,7 @@
           min="105"
           max="700"
         />
-        <p id="jarakBendaValue">100</p>
+        <p id="jarakBendaValue">xx <span>px</span></p>
       </div>
       <div class="jarakFokus">
         <label for="jarakFokus">Jarak Fokus</label>
@@ -40,7 +40,7 @@
           min="100"
           max="350"
         />
-        <p id="jarakFokusValue">100</p>
+        <p id="jarakFokusValue">xx <span>px</span></p>
       </div>
     </div>
     <div class="judul">
