--- a/FINAL/index.html
+++ b/FINAL/index.html
@@ -50,7 +50,7 @@
     <div class="dock">
       <div id="cekungButton">Cekung</div>
       <div id="cembungButton">Cembung</div>
-      <div>niger</div>
+      <div>Sesuatu</div>
     </div>
     <canvas id="myCanvas" width="1800" height="900"></canvas>
     <script type="module" src="./script/script.js"></script>
