add new choosing option

--- a/FINAL/index.html
+++ b/FINAL/index.html
@@ -8,6 +8,13 @@
   </head>
   <body>
     <div class="inputs" id="inputUi">
+      <div>
+        <select name="" id="gantiObjek" class="objectSelect">
+          <option value="">Rumah</option>
+          <option value="">Gelas</option>
+          <option value="">Motor</option>
+        </select>
+      </div>
       <div><p id="lensName">Belum Dipilih</p></div>
       <div class="tinggiObjek">
         <label for="tinggiObjek">Tinggi Objek</label>
