--- a/FINAL/index.html
+++ b/FINAL/index.html
@@ -14,8 +14,8 @@
       <div class="inputsContainer" id="inputsContainer">
         <div>
           <select name="" id="gantiObjek" class="objectSelect">
-            <option value="">Rumah</option>
-            <option value="">Gelas</option>
+            <option value="Rumah">Rumah</option>
+            <option value="Gelas">Gelas</option>
           </select>
         </div>
         <div><p id="lensName">Belum Dipilih</p></div>
@@ -36,7 +36,7 @@
             type="range"
             name="jarakBenda"
             id="jarakBenda"
-            min="105"
+            min="100"
             max="700"
           />
           <p id="jarakBendaValue">xx <span>px</span></p>
